docs: Iceberg federation and Trino integration design obligations (#41)
iceberg-federation.md: the v1 obligations that make the read-only REST
facade viable (field IDs in files, type discipline, Iceberg-exact
transforms, deletion vectors as the delete encoding, typed stats
bounds, metadata-artifact layout + generator).

trino-integration.md: Trino as first facade consumer; commit shapes
kept isomorphic to Iceberg REST so append-only Trino writes stay a
translation, not a redesign; universal-producer invariant.

README: link both docs; JVM-and-Arrow assessment + Hardwood as the
parquet-java alternative to investigate.